octave2.9 (1:2.9.19-2) UNRELEASED; urgency=low

  * Synched with the last octave2.1 release

 -- Rafael Laboissiere <rafael@debian.org>  Tue, 18 Dec 2007 10:01:37 +0100

octave2.1 (1:2.1.73-14) UNRELEASED; urgency=low

  * debian/in/PACKAGE-info.prerm: Fixed a typo that was preventing the
    *octave<version> info files from being removed by "install-info
    --remove" (closes: #456636)

 -- Rafael Laboissiere <rafael@debian.org>  Tue, 18 Dec 2007 09:55:13 +0100

octave2.9 (1:2.9.19-1) unstable; urgency=low

  * New upstream release
  * debian/in/PACKAGE-htmldoc.doc-base.*: Replaced tabulations by single
    spaces at the beginning of continuation lines of the Abstract fields
    (cf Debian doc-base Manual section 2.3.2)
  * debian/rules: Remove empty dirs (usr/{share,lib}/[...]/site/[...])

 -- Rafael Laboissiere <rafael@debian.org>  Sat, 15 Dec 2007 13:19:17 +0100

octave2.9 (1:2.9.18-1) unstable; urgency=low

  * New upstream release
  * debian/rules:
    + Call dh_shlibdeps with the appropriate -l option in order to avoid
      warnings about the private libraries of Octave not being found.  These
      warnings have been introduced in a recent version of dpkg-shlibdeps.
    + Copy version NEWS files from debian/in/ directory into debian/
    + Remove debian/NEWS at clean rule
    + Remove some empty directories from the main octave*.* package
  * debian/in/octave3.0-NEWS: Moved from debian/NEWS
  * debian/in/control:
    + Dropped the Homepage pseudo-header for the extended description
    + Bumped Standards-Version to 3.7.3
    + Use Vcs-* headers instead of the deprecated XS-Vcs-* ones
    + Added editing mode information for Emacs

 -- Rafael Laboissiere <rafael@debian.org>  Thu, 06 Dec 2007 23:21:35 +0100

octave2.9 (1:2.9.17-1) unstable; urgency=low

  * New upstream release

 -- Rafael Laboissiere <rafael@debian.org>  Sat, 10 Nov 2007 11:43:42 +0100

octave2.9 (1:2.9.16-1) unstable; urgency=low

  * New upstream release
