@@ -127,8 +127,8 @@ $(patsubst %,build-%-stamp,arch indep) :: build-%-stamp : \
 
 .PHONY: save-files
 save-files:
-	for f in $(savefiles) $(texifiles) ; do	\
-		cp $$f $$f-save ;		\
+	for f in $(savefiles) $(texifiles) ; do		\
+		test -f $$f && cp $$f $$f-save ;	\
 	done
 
 configure: maintainer-scripts save-files patch-stamp configure-stamp
@@ -138,8 +138,9 @@ configure-stamp:
 	[ -f autogen.sh ] &&  ./autogen.sh && chmod 0755 configure
 
 	# Patch desktop file such that the referenced command exists
-	perl -pi -e 's:/bin/octave:/bin/octave-$(version):' \
-		examples/octave.desktop.in
+	test -f examples/octave.desktop.in				\
+		&& perl -pi -e 's:/bin/octave:/bin/octave-$(version):'	\
+			examples/octave.desktop.in
 
 	DEFAULT_PAGER=pager				\
 	CC=$(c_compiler) 				\
